# tree-sitter-datastar

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  go.mod  grammar.js  install-helix.sh  install.sh  package.json  pyproject.toml  tree-sitter.json
after/queries/html/: injections.scm
after/queries/templ/: injections.scm
after/queries/tsx/: injections.scm
bindings/go/: binding_test.go  go.mod  go.sum
bindings/rust/: lib.rs
docs/: helix-html-injections.scm
lua/tree-sitter-datastar/: init.lua
plugin/: tree-sitter-datastar.lua
queries/: TEMPLATE_LANGUAGES.md  highlights-helix.scm  highlights.scm  injections-helix.scm  injections-nvim-jsx.scm
queries/datastar/: highlights.scm  indents.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: attributes.txt
