[package]
name = "tree-sitter-datastar"
description = "Grammar for Datastar @ data-star.dev"
version = "0.1.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "datastar"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/hyperpuncher/tree-sitter-datastar"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
	"bindings/rust/*",
	"grammar.js",
	"queries/*",
	"src/*",
	"tree-sitter.json",
	"LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.10"
