[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-datastar"
description = "Grammar for Datastar @ data-star.dev"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "datastar"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "hyperpuncher" },
  { name = "Yury Kleyman", email = "kleymanyy@gmail.com" },
]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/hyperpuncher/tree-sitter-datastar"
Repository = "https://github.com/hyperpuncher/tree-sitter-datastar"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
